--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\ANNA\\.netbeans\\7.1rc2\\build.properties
+user.properties.file=C:\\Users\\ANNA\\.netbeans\\7.1.1\\build.properties
