--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=CommuBan
@@ -31,18 +32,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.build-classes=../FrameworkPlugin/build/classes
-file.reference.bukkit-0.0.1-SNAPSHOT.jar=C:\\Users\\ANNA\\Documents\\Frederic\\eclipsace\\bukkit-0.0.1-SNAPSHOT.jar
+file.reference.bukkit-1.1-R4.jar=C:\\Users\\ANNA\\Documents\\Frederic\\netbeanspace\\bukkit-1.1-R4.jar
 file.reference.classes-com=../FrameworkPlugin/build/classes/com
 file.reference.CommuBan-src=../../eclipsace/CommuBan/src
-file.reference.Permissions.jar=C:\\Users\\ANNA\\Documents\\Frederic\\eclipsace\\Permissions.jar
 file.reference.src-com=../../eclipsace/CommuBan/src/com
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.bukkit-0.0.1-SNAPSHOT.jar}:\
-    ${file.reference.Permissions.jar}:\
-    ${reference.SuperChat.jar}:\
-    ${reference.FrameworkPlugin.jar}
+    ${file.reference.bukkit-1.1-R4.jar}:\
+    ${reference.DestiPlugins.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -69,10 +67,8 @@ javadoc.windowtitle=
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
-project.FrameworkPlugin=../FrameworkPlugin
-project.SuperChat=../SuperChat
-reference.FrameworkPlugin.jar=${project.FrameworkPlugin}/dist/DestiPlugins.jar
-reference.SuperChat.jar=${project.SuperChat}/dist/SuperChat.jar
+project.DestiPlugins=../DestiPlugins
+reference.DestiPlugins.jar=${project.DestiPlugins}/dist/PluginsBaker.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
